# pycdc-studio

./: CMakeLists.txt  README.md  README_CN.md  main.cpp
.github/: release-template.md
.github/workflows/: linux-release.yml  release.yml  windows-release.yml
i18n/: pycdc_studio_zh_CN.ts
resources/styles/: app.qss
src/ai/: ai_provider_config.cpp  ai_provider_config.h  openai_compatible_client.cpp  openai_compatible_client.h  prompt_builder.cpp  prompt_builder.h
src/app/: app_context.cpp  app_context.h  app_settings.cpp  app_settings.h
src/model/: ai_reconstruction_result.h  code_object_node.h  decompile_result.h  project_session.cpp  project_session.h
src/service/: decompiler_service.cpp  decompiler_service.h  fallback_service.cpp  fallback_service.h  pycdas_process_runner.cpp  pycdas_process_runner.h  pycdas_tree_parser.cpp  pycdas_tree_parser.h  pycdc_process_runner.cpp  pycdc_process_runner.h
src/ui/: lucide_icon_factory.cpp  lucide_icon_factory.h  main_window.cpp  main_window.h  model_picker_dialog.cpp  model_picker_dialog.h  settings_dialog.cpp  settings_dialog.h
test/: README.md  async_batch_runner.py  compile_test_samples.py  inventory_service.py  nested_features.py  pattern_demo.py  plugin_config_resolver.py  simple_math.py  workflow_orchestrator.py
